--- a/style.css
+++ b/style.css
@@ -65,11 +65,12 @@ li {
     align-items: center;
 }
 
-.inactive {
+.prev-date,
+.next-date{
     color: hsl(308, 5%, 31%);
 }
 
-#active {
+.today {
     background-color: hsl(285, 3%, 27%);
     border-radius: 15px;
     padding: 0.8em;
